@@ -5,9 +5,12 @@
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
 This file records noteworthy changes in Magick++.
+
+<p>
 (5.4.8)<BR>
 <UL>
-  <LI> No changes to report.
+  <LI> The image type() method now also specifies the output image type
+    to use while writing.
 
 </UL>
 <p>
